--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tgbr-core = "0.1.0"
+tgbr-core = { path = "../tgbr/tgbr-core", version = "0.1.0" }
+tgba-core = { path = "../tgba/tgba-core" }
+
 anyhow = "1.0.58"
 argopt = "0.3.0"
 chrono = "0.4.19"
 ciborium = "0.2.0"
+compress-tools = "0.12.2"
 cpal = "0.13.5"
 directories = "4.0.1"
 enum-iterator = "1.1.2"
@@ -37,3 +40,11 @@ serde = "1.0.136"
 serde-bytes-repr = "0.1.5"
 serde_json = "1.0.81"
 toml = "0.5.9"
+
+[package.metadata.vcpkg]
+git = "https://github.com/microsoft/vcpkg"
+branch = "master"
+dependencies = ["libarchive"]
+
+[package.metadata.vcpkg.target]
+x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
