--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
+[workspace]
+members = ["meru-interface"]
+
 [package]
 name = "meru"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+meru-interface = { path = "meru-interface" }
 tgbr-core = { path = "../tgbr/tgbr-core", version = "0.1.0" }
 tgba-core = { path = "../tgba/tgba-core" }
 
