Do not render graphics on frame skip

--- a/meru-interface/Cargo.toml
+++ b/meru-interface/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
-bevy = "0.7.0"
-bevy_egui = "0.14.0"
+bevy_input = "0.7"
+egui = "0.18"
 serde = "1.0.137"
