--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,9 +59,13 @@ jobs:
             os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Setup | Install dependencies
+      - name: Setup | Install dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
+
+      - name: Setup | Install dependencies (Windows)
+        if: matrix.os == 'windows-latest'
+        run: cargo install cargo-vcpkg && cargo vcpkg build
 
       - name: Setup | Checkout
         uses: actions/checkout@v2
