--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,6 +66,7 @@ jobs:
       - name: Setup | Install dependencies (Windows)
         if: matrix.os == 'windows-latest'
         run: |
+          pwd
           ls
           cargo install cargo-vcpkg
           cargo vcpkg build
