--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,11 +25,11 @@ jobs:
     name: Clippy [Linter]
     runs-on: ubuntu-latest
     steps:
-      - name: Setup | Install dependencies
-        run: sudo apt-get update && sudo apt install -y libasound2-dev libudev-dev libgtk-3-dev libxcb-shape0-dev libxcb-xfixes0-dev
-
       - name: Setup | Checkout
         uses: actions/checkout@v2
+
+      - name: Setup | Install dependencies
+        run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
 
       - name: Setup | Cache
         uses: Swatinem/rust-cache@v1
@@ -90,11 +90,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: cargo_check
     steps:
-      - name: Setup | Install dependencies
-        run: sudo apt-get update && sudo apt install -y libasound2-dev libudev-dev libgtk-3-dev libxcb-shape0-dev libxcb-xfixes0-dev
-
       - name: Setup | Checkout
         uses: actions/checkout@v2
+
+      - name: Setup | Install dependencies
+        run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
 
       - name: Setup | Cache
         uses: Swatinem/rust-cache@v1
