--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,11 +25,11 @@ jobs:
     name: Clippy [Linter]
     runs-on: ubuntu-latest
     steps:
-      - name: Setup | Install dependencies
-        run: sudo apt-get update && sudo apt install -y libasound2-dev libudev-dev libgtk-3-dev libxcb-shape0-dev libxcb-xfixes0-dev
-
       - name: Setup | Checkout
         uses: actions/checkout@v2
+
+      - name: Setup | Install dependencies
+        run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
 
       - name: Setup | Cache
         uses: Swatinem/rust-cache@v1
@@ -59,12 +59,18 @@ jobs:
             os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Setup | Install dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt install -y libasound2-dev libudev-dev libgtk-3-dev
-
       - name: Setup | Checkout
         uses: actions/checkout@v2
+
+      - name: Setup | Install dependencies (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
+
+      - name: Setup | Install dependencies (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          cargo install cargo-vcpkg
+          cargo vcpkg build
 
       - name: Setup | Cache
         uses: Swatinem/rust-cache@v1
@@ -84,11 +90,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: cargo_check
     steps:
-      - name: Setup | Install dependencies
-        run: sudo apt-get update && sudo apt install -y libasound2-dev libudev-dev libgtk-3-dev libxcb-shape0-dev libxcb-xfixes0-dev
-
       - name: Setup | Checkout
         uses: actions/checkout@v2
+
+      - name: Setup | Install dependencies
+        run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
 
       - name: Setup | Cache
         uses: Swatinem/rust-cache@v1
