--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,11 @@
 name: Release
 
-on:
-  push:
-    tags:
-      - 'v*'
+# on:
+#   push:
+#     tags:
+#       - 'v*'
+
+on: workflow_dispatch
 
 jobs:
   github_build:
@@ -14,21 +16,27 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
-            binary: tgbr
+            binary: meru
             extension: tar.xz
           - target: x86_64-pc-windows-msvc
             os: windows-latest
-            binary: tgbr.exe
+            binary: meru.exe
             extension: zip
 
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Build | Install dependencies
-        if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt install -y libasound2-dev libudev-dev libgtk-3-dev
-      
       - name: Build | Checkout
         uses: actions/checkout@v2
+
+      - name: Build | Install dependencies (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt install -y libarchive-dev libasound2-dev libudev-dev libgtk-3-dev
+
+      - name: Setup | Install dependencies (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          cargo install cargo-vcpkg
+          cargo vcpkg build
 
       - name: Build | Install toolchain
         uses: actions-rs/toolchain@v1
@@ -54,21 +62,21 @@ jobs:
           strip ${{ matrix.binary }}
           cd -
           cp target/${{ matrix.target }}/release/${{ matrix.binary }} .
-          7z a tgbr-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }} ${{ matrix.binary }} README.md LICENSE
+          7z a meru-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }} ${{ matrix.binary }} README.md LICENSE
 
       - name: Post Build | Prepare artifacts [-nix]
         if: matrix.os != 'windows-latest'
         run: |
           strip target/${{ matrix.target }}/release/${{ matrix.binary }}
-          mkdir tgbr-${{ github.ref_name }}
-          cp target/${{ matrix.target }}/release/${{ matrix.binary }} README.md LICENSE tgbr-${{ github.ref_name }}
-          tar -cJvf tgbr-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }} tgbr-${{ github.ref_name }}
+          mkdir meru-${{ github.ref_name }}
+          cp target/${{ matrix.target }}/release/${{ matrix.binary }} README.md LICENSE meru-${{ github.ref_name }}
+          tar -cJvf meru-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }} meru-${{ github.ref_name }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: tgbr-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }}
-          path: tgbr-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }}
+          name: meru-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }}
+          path: meru-${{ github.ref_name }}-${{ matrix.target }}.${{ matrix.extension }}
 
   github_release:
     name: Create GitHub Release
@@ -86,4 +94,4 @@ jobs:
       - name: Build | Publish
         uses: softprops/action-gh-release@v1
         with:
-          files: tgbr-*/tgbr-*
+          files: meru-*/meru-*
