--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 
 [dependencies]
 meru-interface = { path = "meru-interface" }
-tgbr-core = { git = "https://github.com/tanakh/tgbr", version = "0.1.0" }
-tgba = { git = "https://github.com/tanakh/tgba" }
+tgbr = { git = "https://github.com/tanakh/tgbr", version = "0.2.0" }
+tgba = { git = "https://github.com/tanakh/tgba", version = "0.1.0" }
 
 anyhow = "1.0.58"
 bevy = { version = "0.7", features = ["serialize"] }
