--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ keywords = ["emulators"]
 meru-interface = { path = "meru-interface", version = "0.2.0" }
 tgbr = { git = "https://github.com/tanakh/tgbr", version = "0.2.1" }
 tgba = { git = "https://github.com/tanakh/tgba", version = "0.1.0" }
+super-sabicom = { path = "../super-sabicom", version = "0.1.0" }
 
 anyhow = "1.0.58"
 bevy = { version = "0.7", features = ["serialize"] }
@@ -26,14 +27,15 @@ bevy_egui = "0.14"
 bevy_tiled_camera = "0.3.1"
 chrono = "0.4.19"
 compress-tools = "0.12.2"
-cpal = "0.13.5"
 directories = "4.0.1"
 enum-iterator = "1.1.2"
 image = { version = "0.24.2", default-features = false, features = ["ico"] }
 log = "0.4.17"
 rfd = "0.9"
+rodio = "0.15.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.81"
+thiserror = "1.0.31"
 tempfile = "3.3.0"
 winit = "0.26.1"
 
