--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["meru-interface"]
+exclude = ["super-sabicom"]
 
 [package]
 name = "meru"
@@ -16,19 +17,20 @@ keywords = ["emulators"]
 
 [dependencies]
 meru-interface = { path = "meru-interface", version = "0.2.0" }
+sabicom = { path = "sabicom", version = "0.1.0" }
+super-sabicom = { path = "super-sabicom", version = "0.1.0" }
 tgbr = { path = "tgbr", version = "0.3.0" }
 tgba = { path = "tgba", version = "0.2.0" }
-super-sabicom = { path = "../super-sabicom", version = "0.1.0" }
 
 anyhow = "=1.0.59"
 bevy = { version = "0.8.0", features = ["serialize"] }
 bevy_easings = "0.8.1"
 bevy_egui = "0.15.1"
 bevy_tiled_camera = "0.4.0"
-chrono = "0.4.19"
+chrono = "0.4.22"
 compress-tools = "0.13.0"
 directories = "4.0.1"
-enum-iterator = "1.1.2"
+enum-iterator = "1.1.3"
 image = { version = "0.24.3", default-features = false, features = ["ico"] }
 log = "0.4.17"
 rfd = "0.10.0"
@@ -38,6 +40,9 @@ serde_json = "1.0.83"
 thiserror = "1.0.32"
 tempfile = "3.3.0"
 winit = "0.26"
+
+[dev-dependencies]
+serde_json = "1.0.83"
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
@@ -49,3 +54,6 @@ dependencies = ["libarchive"]
 
 [package.metadata.vcpkg.target]
 x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
+
+[patch.crates-io]
+meru-interface = { path = "meru-interface" }
