--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,23 +23,39 @@ tgbr = { path = "tgbr", version = "0.3.0" }
 tgba = { path = "tgba", version = "0.2.0" }
 
 anyhow = "=1.0.59"
+async-channel = "1.7.1"
+bincode = "1.3.3"
 bevy = { version = "0.8.0", features = ["serialize"] }
 bevy_easings = "0.8.1"
 bevy_egui = "0.15.1"
 bevy_tiled_camera = "0.4.0"
+cfg-if = "1.0.0"
 chrono = "0.4.22"
-compress-tools = "0.13.0"
 directories = "4.0.1"
-enum-iterator = "1.1.3"
+either = "1.8.0"
+enum-iterator = "1.2.0"
 image = { version = "0.24.3", default-features = false, features = ["ico"] }
 log = "0.4.17"
 rfd = "0.10.0"
-rodio = "0.15.0"
+rodio = { version = "0.15.0", default-features = false }
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = "1.0.83"
 thiserror = "1.0.32"
 tempfile = "3.3.0"
 winit = "0.26"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+compress-tools = "0.13.0"
+futures = { version = "0.3.23", features = ["thread-pool"] }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+chrono = "0.4.22"
+indexed_db_futures = "0.2.3"
+js-sys = "0.3.59"
+wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
+wasm-bindgen-futures = "0.4.32"
+web-sys = "0.3.59"
+zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
 
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
