--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,8 +37,9 @@ jobs:
 
       - name: Build | Install wasm-bindgen-cli
         uses: actions-rs/toolchain@v1
-        command: install
-        args: wasm-bindgen-cli
+        with:
+          command: install
+          args: wasm-bindgen-cli
 
       - name: Build | Build
         uses: actions-rs/cargo@v1
