--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -36,7 +36,7 @@ jobs:
           override: true
 
       - name: Build | Install wasm-bindgen-cli
-        uses: actions-rs/toolchain@v1
+        uses: actions-rs/cargo@v1
         with:
           command: install
           args: wasm-bindgen-cli
