--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,6 +61,8 @@ jobs:
             os: ubuntu-latest
           - target: x86_64-pc-windows-msvc
             os: windows-latest
+          - target: wasm32-unknown-unknown
+            os: ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Setup | Checkout
