--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ super-sabicom = { path = "super-sabicom", version = "0.1.0" }
 tgbr = { path = "tgbr", version = "0.3.0" }
 tgba = { path = "tgba", version = "0.2.0" }
 
-anyhow = "=1.0.59"
+anyhow = "1.0.63"
 async-channel = "1.7.1"
 async-std = { version = "1.12.0", features = ["attributes"] }
 bincode = "1.3.3"
@@ -34,7 +34,7 @@ bevy = { version = "0.8.1", default-features = false, features = [
 ] }
 bevy_easings = "0.8.1"
 bevy_egui = "0.16.0"
-bevy_tiled_camera = "0.4.0"
+bevy_tiled_camera = "0.4.1"
 cfg-if = "1.0.0"
 chrono = "0.4.22"
 directories = "4.0.1"
@@ -47,17 +47,18 @@ rodio = { version = "0.15.0", default-features = false }
 schemars = "0.8.10"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-thiserror = "1.0.32"
+thiserror = "1.0.33"
 tempfile = "3.3.0"
 winit = "0.26" # bevy_winit-0.8.1 depends on 0.25.x
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 compress-tools = "0.13.0"
-futures = { version = "0.3.23" }
+futures = { version = "0.3.24" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 indexed_db_futures = "0.2.3"
 js-sys = "0.3.59"
+url = "2.2.2"
 wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
 web-sys = "0.3.59"
 zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
